# lic

./: include.pro  licInclude.config  licsrc.pro  qmk.sh  tetris.conf
addr/: addr.cpp  addr.pro
appcall/: appcall.cpp  appcall.pro
appf/: Makefile  appf.f  appf.pro
apps/: apps.cpp  apps.pro
client/: Doxyfile  appInclude.h  applic.cpp  applic.h  client.pro  noServer.cpp  noServer.hpp  startClient.cpp  startClient.h
east/: east.cpp  east.h  east.pro
eastapp/: eastapp.cpp  eastapp.pro
eastappf/: Makefile  eastappf.f
http/: http.pro  http_call.cpp  http_call.hpp
jason/: jason.cpp  jason.pro  report.json
licbase/: DBstat.cpp  DBstat.h  LEncrypt.cpp  LEncrypt.h  LFileDate.cpp  LFileDate.h  LInfoMng.cpp  LInfoMng.h  LLicEncrypt.cpp  LLicEncrypt.h  LLicFile.cpp  LLicFile.h  LPackageDef.h  LPackageMng.cpp  LPackageMng.h  LSummary.h  SAppInfo.cpp  SPackInfo.h  SPackMng.cpp  licbase.pro  testG.h
liccommon/: comDefs.h  jsonParser.cpp  jsonParser.hpp  liccommon.pro  startC.cpp  testdev.pro  umServer.hpp
licconfig/: ConfigMng.cpp  ConfigMng.h  LimitConfig.cpp  LimitConfig.h  LimitData.cpp  LimitData.h  config.db  licconfig.cpp  licconfig.pro
licdev/: licdev.cpp  licdev.pro  startS.cpp
licserver/: ConfigMng.cpp  ConfigMng.h  SAgent.cpp  SAgent.h  SAppInfo.h  SCycleThread.cpp  SCycleThread.h  SLicData.cpp  SLicData.h  SLicMng.cpp  SLicMng.h  SPackInfo.h  SPackMng.cpp  SPackMng.h  licserver.pro
licwork/: licfile.sample  licfile.sample_borrowin  licfile.sample_borrowinuser  licfile.sample_node  licfile.sample_task2  licfile.sample_user  licfile.sample_user10  mklic.sh  mypri.key  mypub.key  mypubkey1.h  vender.pri  vender.pub
portal/: CMakeLists.txt  portal.cpp  portal.pro  simApp.cpp  tetrisc.cpp  tetrisd.cpp  tetrisu.cpp
portal/include/: crow_all.h
server/: SCycleThread.cpp  SCycleThread.h  licAgent.cpp  licAgent.hpp  licServer.cpp  licServer.hpp  server.pro
sh/: ckey  cr.sh  doc.txt  job10.sh  jobs2.sh  lic.sh  licdevh  licgenh  lichelp  lichelp.txt  mkhelp.sh  pub2h  root.sh  rootaddmb.sh  stjobh  vlog.sh
startagent/: startA.cpp  startagent.cpp  startagent.pro
testagent/: testagent.cpp  testagent.pro
testapi/: testCrypt.cpp  (+2 more)
(+59 files in other folders)
